--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.10.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
