--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://alimoini:Ali_28848@newcluster.s5wwm.mongodb.net/next-tailwind-amazona?retryWrites=true&w=majority
+JWT_SECRET=lionsblood
