--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://alimoini:Ali_28848@newcluster.s5wwm.mongodb.net/next-tailwind-amazona?retryWrites=true&w=majority
-JWT_SECRET=lionsblood
+JWT_SECRET=evillion
 PAYPAL_CLIENT_ID=AYPbvrrABK1D7GrkoNpBcG5dUrPgUXSUIICVUiq7-w7jkXREiSIFiyndO258BgHanOhAUucmgByrdnUL
