--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://alimoini:Ali_28848@newcluster.s5wwm.mongodb.net/next-tailwind-amazona?retryWrites=true&w=majority
 JWT_SECRET=evillion
 NEXTAUTH_SECRET=evillion
-NEXTAUTH_URL=https://localhost:3000
-
+NEXTAUTH_URL=http://localhost:3000
+ 
 PAYPAL_CLIENT_ID=AYPbvrrABK1D7GrkoNpBcG5dUrPgUXSUIICVUiq7-w7jkXREiSIFiyndO258BgHanOhAUucmgByrdnUL
